--- a/app/res/layout/activity_loan_borrow.xml
+++ b/app/res/layout/activity_loan_borrow.xml
@@ -9,6 +9,25 @@
     tools:context=".LoanBorrowActivity" >
 
     <EditText
+        android:id="@+id/contact_name_input"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="19dp"
+        android:hint="@string/loan_borrow_contact_hint"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <Button
+        android:id="@+id/scan_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/contact_name_input"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp"
+        android:text="@string/scan_media_button" />
+
+    <EditText
         android:id="@+id/media_editable_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,37 +35,25 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
         android:ems="10"
-        android:inputType="textPersonName" >
-
-        <requestFocus />
-    </EditText>
-
-    <TextView
-        android:id="@+id/contact_name_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="19dp"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <Button
-        android:id="@+id/scan_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/contact_name_label"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
-        android:text="@string/scan_media_button" />
+        android:inputType="textPersonName" />
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/loan_borrow_book_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/media_editable_title"
+        android:layout_below="@+id/due_date_edit_text"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="32dp"
         android:src="@drawable/abs__ab_bottom_solid_dark_holo" />
+
+    <EditText
+        android:id="@+id/due_date_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/media_editable_title"
+        android:layout_below="@+id/media_editable_title"
+        android:layout_marginTop="32dp"
+        android:ems="10"
+        android:inputType="date" />
 
 </RelativeLayout>
