--- a/app/res/layout/activity_loan_borrow.xml
+++ b/app/res/layout/activity_loan_borrow.xml
@@ -1,59 +1,59 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true" >
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".LoanBorrowActivity" >
-
+    
     <EditText
         android:id="@+id/contact_name_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="19dp"
         android:hint="@string/loan_borrow_contact_hint"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <ImageView
-        android:id="@+id/loan_borrow_book_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/media_editable_title"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp"
-        android:src="@drawable/abs__ab_bottom_solid_dark_holo" />
+        android:textAppearance="?android:attr/textAppearanceLarge" >
+        
+        <requestFocus />
+    </EditText>
 
     <Button
         android:id="@+id/scan_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/media_editable_title"
-        android:layout_centerVertical="true"
         android:text="@string/scan_media_button" />
-
+    
     <EditText
         android:id="@+id/media_editable_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/contact_name_input"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:inputType="textPersonName" >
+        android:inputType="textPersonName"
+        android:visibility="gone" >
 
-        <requestFocus />
     </EditText>
+    
+    <ImageView
+        android:id="@+id/loan_borrow_book_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
+        android:src="@drawable/abs__ab_bottom_solid_dark_holo" />
 
     <DatePicker
         android:id="@+id/dueDatePicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginBottom="14dp" />
 
-</RelativeLayout>
+</LinearLayout>
+</ScrollView>
