--- a/app/res/layout/activity_dashboard.xml
+++ b/app/res/layout/activity_dashboard.xml
@@ -1,12 +1,13 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".DashboardActivity" >
+    android:fillViewport="true" >
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/helloWorldView"
@@ -15,16 +16,15 @@
         android:text="@string/hello_world" />
 
      <TableLayout
-         android:layout_below="@+id/helloWorldView"
-         android:id="@+id/quickHistory"
+         android:id="@+id/dueDatesTableLayout"
          android:layout_width="match_parent"
-         android:layout_height="100dp" >
+         android:layout_height="wrap_content" >
+         
      </TableLayout>
 
 	<LinearLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
-	    android:layout_below="@+id/quickHistory"
 	    android:orientation="vertical" >
 
         <LinearLayout 
@@ -67,4 +67,5 @@
 
 	</LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
+</ScrollView>
