--- a/app/res/layout/activity_loan_borrow.xml
+++ b/app/res/layout/activity_loan_borrow.xml
@@ -22,7 +22,8 @@
         android:layout_marginTop="19dp"
         android:hint="@string/loan_borrow_contact_hint"
         android:layout_gravity="center_horizontal"
-        android:textAppearance="?android:attr/textAppearanceLarge" >
+        android:textAppearance="?android:attr/textAppearanceLarge" 
+        style="@style/TextEditor">
         
         <requestFocus />
     </EditText>
@@ -32,7 +33,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="@string/scan_media_button" />
+        android:text="@string/scan_media_button" 
+        style="@style/ButtonStyle" />
     
     <EditText
         android:id="@+id/media_editable_title"
@@ -42,7 +44,8 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:layout_gravity="center_horizontal"
-        android:hint="barcode"
+        android:hint="Book Name"
+        style="@style/TextEditor"
         >
 
     </EditText>
@@ -53,6 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="Manual Scan"
+        style="@style/ButtonStyle"
         />
     
     <ImageView
@@ -70,7 +74,8 @@
         android:layout_gravity="center_horizontal"
         android:spinnersShown="true"
         android:calendarViewShown="false"
-        android:layout_marginBottom="14dp" />
+        android:layout_marginBottom="14dp"
+        style="@style/DatePickerStyle" />
 
 </LinearLayout>
 </ScrollView>
