--- a/app/res/layout/activity_loan_borrow.xml
+++ b/app/res/layout/activity_loan_borrow.xml
@@ -73,6 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:spinnersShown="true"
+        android:startYear="2013"android:editTextStyleandroid:editTextStyle
         android:calendarViewShown="false"
         android:layout_marginBottom="14dp"
         style="@style/DatePickerStyle" />
