--- a/app/res/layout-sw600dp/activity_loan_borrow.xml
+++ b/app/res/layout-sw600dp/activity_loan_borrow.xml
@@ -1,12 +1,9 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true" >
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:fillViewport="true" 
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -25,31 +22,32 @@
         
         <requestFocus />
     </EditText>
-
+    
     <EditText
         android:id="@+id/media_editable_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:inputType="textPersonName"
+        android:layout_gravity="center_horizontal"
         android:hint="barcode"
-        android:inputType="textPersonName" />
+        >
 
-    <Button
-        android:id="@+id/scan_button"
-        android:layout_width="wrap_content"
+    </EditText>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/scan_media_button" />
-    
-    <ImageView
-        android:id="@+id/loan_borrow_book_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/abs__ab_bottom_solid_dark_holo" />
+        android:gravity="center_horizontal" >
+
+        <Button
+            android:id="@+id/scan_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/scan_media_button" />
+
+    </LinearLayout>
 
     <DatePicker
         android:id="@+id/dueDatePicker"
@@ -60,5 +58,12 @@
         android:calendarViewShown="false"
         android:layout_marginBottom="14dp" />
 
+    <ImageView
+        android:id="@+id/loan_borrow_book_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="18dp"
+        android:src="@drawable/abs__ab_bottom_solid_dark_holo" />
+
 </LinearLayout>
-</ScrollView>
