--- a/app/res/layout-sw600dp/activity_loan_borrow.xml
+++ b/app/res/layout-sw600dp/activity_loan_borrow.xml
@@ -27,12 +27,11 @@
         android:id="@+id/media_editable_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:inputType="textPersonName"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
+        android:ems="10"
         android:hint="barcode"
-        >
+        android:inputType="textPersonName" >
 
     </EditText>
 
@@ -45,6 +44,7 @@
             android:id="@+id/scan_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:text="@string/scan_media_button" />
 
     </LinearLayout>
@@ -54,16 +54,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:spinnersShown="true"
+        android:layout_marginTop="30dp"
         android:calendarViewShown="false"
-        android:layout_marginBottom="14dp" />
+        android:spinnersShown="true" />
 
     <ImageView
         android:id="@+id/loan_borrow_book_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="18dp"
-        android:src="@drawable/abs__ab_bottom_solid_dark_holo" />
+        android:layout_marginTop="30dp" />
 
 </LinearLayout>
