Brighten up the color.

--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -15,7 +15,8 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-        <item name="android:editTextStyle">@color/CornflowerBlue</item>
+        <item name="android:editTextStyle">@color/TextColor</item>
+        <item name="android:textColor">@color/TextColor</item>
     </style>
     
     <style name="dashboard_button_style">
@@ -23,14 +24,18 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1.0</item>
         <item name="android:layout_margin">7dip</item>
+        <item name="android:textColor">@color/ButtonTextColor</item>
     </style>
     <style name="TextEditor">
-        <item name="android:textColor">#D0D0D0</item>
+        <item name="android:textColor">#CCCCCC</item>
     </style>
     <style name="DatePickerStyle" parent="TextEditor">
-        <item name="android:editTextStyle">@color/CornflowerBlue</item>
+        <item name="android:editTextStyle">@color/TextColor</item>
     </style>
-    <style name="ButtonStyle"></style>
-    <color name="CornflowerBlue">#FFFFFF</color>
+    <style name="ButtonStyle">
+        <item name="android:textColor">#DDDDDD</item>
+    </style>
+    <color name="TextColor">#CCCCCC</color>
+    <color name="ButtonTextColor">#DDDDDD</color>
 
 </resources>
