--- a/app/res/layout/activity_history.xml
+++ b/app/res/layout/activity_history.xml
@@ -4,7 +4,8 @@
     tools:context=".HistoryActivity"
     android:id="@+id/history_list_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:background="@drawable/cloud_bg"
     >
     
     
