--- a/app/res/layout/activity_library.xml
+++ b/app/res/layout/activity_library.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/library_list_view"
+    android:background="@drawable/cloud_bg"
     tools:context=".LibraryActivity" >
 
 </ListView>
