--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -18,13 +18,16 @@
         <item name="android:editTextStyle">@color/TextColor</item>
         <item name="android:textColor">@color/TextColor</item>
     </style>
-    
+    <style name="dashboard_row_style">
+        <item name="android:layout_height">100dip</item>
+    </style>
     <style name="dashboard_button_style">
         <item name="android:layout_width">0dip</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_height">180dip</item>
         <item name="android:layout_weight">1.0</item>
         <item name="android:layout_margin">7dip</item>
         <item name="android:textColor">@color/ButtonTextColor</item>
+        <item name="android:background">@android:color/transparent</item>
     </style>
     <style name="TextEditor">
         <item name="android:textColor">#CCCCCC</item>
